<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/addCardText"
        android:text="@string/check_in_room"
        android:textColor="@color/blue_main"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addCardInfo" />

    <TextView
        android:id="@+id/addCardInfo"
        android:text="@string/add_room_info"
        android:textColor="@color/blue_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addCardText"
        app:layout_constraintBottom_toTopOf="@id/outlinedTextFieldToken" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldToken"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/token"
        app:boxStrokeColor="@color/blue_main"
        android:textColorHint="@color/blue_main"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addCardInfo"
        app:layout_constraintBottom_toTopOf="@id/checkInButton"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tokenTextField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/checkInButton"
        android:text="@string/check_in"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldToken"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>